# rust-market-data-pipeline

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
docs/: dataflow.mmd
examples/: data_pipeline.rs
output/: ibm_daily.parquet
