[workspace]
members = [
    "crates/core",
    "crates/data",
    "crates/utils",
]
resolver = "2"

[workspace.dependencies]
polars = { version = "0.34.2", features = ["lazy", "parquet"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"

# Local Crates
rmdp-core = { path = "crates/core" }
rmdp-data = { path = "crates/data" }
rmdp-utils = { path = "crates/utils" }

# Root package for running examples
[package]
name = "rust-market-data-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
rmdp-core = { workspace = true }
rmdp-data = { workspace = true }
rmdp-utils = { workspace = true }
polars = { workspace = true }

