[package]
name = "rmdp-data"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]

[dependencies]
polars = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

